# deomeeautomations

./: .gitignore  ai-context.txt  deomee_ai_context_bundle_v6_compact_unfiltered.py  gitignore_zip.py  readme.md  sample_letter.odt
add-to-whatsapp-group/: .gitignore  README.md  lahore-ht-test.xlsx  pyproject.toml
add-to-whatsapp-group/tests/: test_contacts.py  test_history.py  test_membership_audit.py
add-to-whatsapp-group/whatsapp_group_importer/: __init__.py  audit_cli.py  cli.py  contacts.py  history.py  membership_audit.py  publisher.py
antidengue/: .env.example  .gitignore  List-school-M-EE-09-04-2026.xlsx  README.md  compliance_reconciliation.py  hotspot_analysis.py  last_scrape_metadata.json  main.py  officers_list.before-aeo-corrections-20260703.csv  officers_list.csv  patterns.txt  playwright_session.json  portal_reports.py  pyproject.toml  scraper.py  simple_activity_analysis.py  test_compliance_reconciliation.py  test_dormant_filter.py  test_hotspot_analysis.py  test_playwright.py  test_portal_reports.py  test_scraper_navigation.py  test_simple_activity_analysis.py  whatsapp_recipients.csv
antidengue/archived-files/: user_wise_dormancy_report_1777703380.xls  user_wise_dormancy_report_1777722156.xls  user_wise_dormancy_report_1777958689.xls  user_wise_dormancy_report_1777971709.xls  user_wise_dormancy_report_1778061108.xls  user_wise_dormancy_report_1778129856.xls  user_wise_dormancy_report_1778250915.xls  user_wise_dormancy_report_1778308663.xls  user_wise_dormancy_report_1778313423.xls  user_wise_dormancy_report_1778477813.xls  user_wise_dormancy_report_1778563481.xls  user_wise_dormancy_report_1783936302.xls
antidengue/drop-manual-selected-files/: user_wise_dormancy_report_1783918903_20260713_205512_6bd86c35.xls  user_wise_dormancy_report_1783926204_20260714_040020_3486f325.xls  user_wise_dormancy_report_20260702_111612_c37ba1e8.xls  user_wise_dormancy_report_20260714_084917_5accfb5e.xls
antidengue/drop-manually-unfilterd-files/: .~lock.user_wise_dormancy_report.xls#
antidengue/drop-raw-files/: 00087e9a-3bc2-4489-8f68-6971142ad977  042fbe32-c81f-4024-b0f8-7d23f3fb7ac3  05ca0bff-e928-45b6-bd77-232500ed6c26  07035077-8664-4d38-b80a-f35a1835e0f2  0b010764-12bb-4857-a634-0f4039e24a97  0f91afef-45af-4395-b8c1-7ae3267a316c  108dc82e-1962-41a4-ae5f-baee74b1452d  1129bafc-924e-464e-9f3c-f6ae9e1fb27d  138621f2-1b58-47f8-9724-51c99edf43ea  15c9b328-6c96-41f3-939e-f205a72db208  2acdfe01-38c0-46df-9323-8d07f55945a1  2c01c1c2-60f7-46b7-b5ca-15b5fd6ca6e9  31be1d69-e05c-4386-b0b1-e02b05c49648  33608c2e-720d-4d1d-9ca9-b585a1cb8224  37e8773b-1f72-4c80-8ea3-f0e9e3fd5ed9  3e3b2c57-42a4-42a6-b981-9d5444dca8f1  47b05ae2-fc5f-44b9-85c3-727fc9eb8e78  4b007242-7943-499c-b182-b02a5da1c28a  4b1efdc0-11b2-4b77-b633-4172980b1d95  4e664aa7-244c-459e-84e8-a75afbcf2f0c  524da005-f928-4dfb-b375-0590d955cb7e  5c058bbd-2cb5-4b5e-bf6d-3fc6479f5480  5c42caff-455e-4fd0-a698-2f4d32bf97e7  673f9814-6050-45e3-ad36-f4cf4b23dba0  6917e6db-0352-4a58-93eb-181fdaad59b7  7122ae9a-94b7-4a12-a6b9-9f2d6b8ee047  738e11c2-a980-4da8-8fd7-9641bff51faf  777dc2f4-82cf-4314-92b2-8c074624d9a3  79c9cf9a-bc22-422a-bf20-ca2ec7f09884  7cf7b8ac-5be3-4b91-b3cc-7ffea0578434  816178f0-e130-46a6-9f57-cdaf9514ac51  82fb5d6e-d2a0-4688-af92-23668b3c258b  859fae71-f128-45fe-ad2d-c14d459e69cb  85a70d94-10f4-41fc-bead-e89587ee220e  8adf7848-5d19-4fbb-b3d1-5c4b034b577e  8f576fe6-6197-443e-a5ee-32d5e00267a8  98f02864-1777-4d99-8972-b32fb7cc9cbf  99182c78-39e1-418f-81cc-058daad8a7b4  9b79038f-f412-4bf7-810d-ca2607ce4d16  9b801402-4124-4e1c-bccd-2d8f24f57c4a  (+61 more)
automation-control-api/: .env.example  README.md  pyproject.toml
automation-control-api/app/: __init__.py  auth.py  config.py  main.py
automation-management-gui/: .complaints_manager.json  MODULAR_STRUCTURE.md  README.md  main.py  pyproject.toml
automation-platform/: .dockerignore  .env.example  .gitignore  IMPLEMENTATION_NOTES.md  README.md  automation_platform_db_diagnostic.py  compose.yaml  pyproject.toml
automation-platform/.update-backups/: antidengue-schedules-safe-auto-send-bundle-ad-s1-s2-v1.1.latest  antidengue-schedules-safe-auto-send-bundle-ad-s1-s2-v1.2.latest  antidengue-schedules-safe-auto-send-bundle-ad-s1-s2.latest  crm-taxonomy-reply-workspace-b3.1.3.latest  frappe-complaint-foundation-b1.1.latest  frappe-complaint-foundation-b1.2.latest  frappe-complaint-foundation-b1.3.latest  frappe-complaint-foundation-b1.latest  whatsapp-inbound-batch-management-bundle-4b.1.latest  whatsapp-inbound-batch-management-bundle-4b.2.latest  whatsapp-inbound-crm-processing-bundle-4c.latest  whatsapp-object-storage-batch-ledger-bundle-4a.latest  whatsapp-web-history-native-store-fix-v2.3.latest
automation-platform/alembic/: env.py
automation-platform/control/: antidengue.exchange  celery.pidbox.exchange  reply.celery.pidbox.exchange
automation-platform/docs/: operations.md
crm-management-system/: .env.example  README.md  apply_deo_replies.py  build_crm_reply_context.py  convert_excel_rows_to_pdfs.py  crm-compliances-recepients.csv  crm_duplicate_notices.py  delete_old_versions.py  filter_crm_duplicates.py  filter_crm_excel_duplicates.py  filter_crm_pdf_duplicates.py  fix_crm_status.py  generate_crm_compliance_folders.py  generate_letters.py  ingest_crm.py  main.py  open_latest_compliance_dispatch_preview.py  paperless_field_defaults.json  prepare_crm_upload.py  pull_paperless_state.py  pyproject.toml  review_crm_number_missing.py  send_compliances.py  sync_crm_reply_knowledge.py  sync_crm_reply_knowledge_from_paperless.py  test_apply_deo_replies.py  test_filter_crm_excel_duplicates.py  test_paperless_uniqueness.py  upload_compliances.py
scrap-pmdu/: .env.example  .gitignore  README.md  delete_old_versions.py  fix_crm_status.py  generate_letters.py  ingest_crm.py  main.py  notification_config.json  notify_under_investigation.py  paperless.py  paperless_field_defaults.json  phase2.py  pull_paperless_state.py  pyproject.toml  restore_pmdu_status.py  upload_crm.py  whatsapp_groups.csv
sms-campaign-manager/: .env.example  .gitignore  README.md  pyproject.toml
(+5243 files in other folders)
