[project]
name = "dengue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "black==26.3.1",
    "blinker==1.9.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "click==8.3.2",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "dataframe-image>=0.2.7",
    "et-xmlfile==2.0.0",
    "flask==3.1.3",
    "fonttools==4.62.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "isort==8.0.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "kiwisolver==1.5.0",
    "lxml>=6.0.3",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mistune==3.2.0",
    "mypy-extensions==1.1.0",
    "narwhals==2.19.0",
    "nats-py>=2.14.0",
    "numpy==2.4.4",
    "openpyxl==3.1.5",
    "packaging==26.0",
    "pandas==3.0.2",
    "pathspec==1.0.4",
    "pdfrw==0.4",
    "pillow==12.2.0",
    "platformdirs==4.9.6",
    "playwright>=1.58.0",
    "plotly==6.6.0",
    "pluggy==1.6.0",
    "prefect>=3.6.26",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "pytest==9.0.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv>=1.1.0",
    "pytokens==0.4.1",
    "pywin32==311 ; sys_platform == 'win32'",
    "requests==2.33.1",
    "six==1.17.0",
    "tzdata==2026.1",
    "urllib3==2.6.3",
    "watchdog==6.0.0",
    "werkzeug==3.1.8",
    "xlrd==2.0.2",
    "xlwings==0.35.0",
]
