[project]
name = "automation-control-api"
version = "0.1.0"
description = "Local control API for Deomee automation projects"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
automation-control-api = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
