[project]
name = "automation-management-gui"
version = "0.1.0"
description = "Standalone GUI console for CRM, PMDU, and AntiDengue automation systems"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.2",
    "imgui-bundle>=1.92.801",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.2",
]
