[project]
name = "automation-platform"
version = "0.1.0"
description = "API-first automation platform for Deomee workflows."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic",
    "celery",
    "fastapi[standard]",
    "flower",
    "nats-py>=2.15.0",
    "lxml",
    "openpyxl",
    "pillow",
    "pandas",
    "psycopg[binary]",
    "pydantic-settings",
    "python-dotenv",
    "redis",
    "requests",
    "sqlmodel",
    "xlrd",
    "reportlab>=5.0.0",
]

[dependency-groups]
dev = [
    "httpx2",
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "ruff>=0.11,<1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
    "apps/api",
    "apps/worker",
    "packages/automation_core",
    "packages/antidengue_automation",
    "packages/crm_domain",
    "packages/crm_filters",
    "packages/crm_integrations",
    "packages/master_data",
    "packages/whatsapp_gateway",
]

[tool.pytest.ini_options]
pythonpath = [
    "apps/api",
    "apps/worker",
    "packages/automation_core",
    "packages/antidengue_automation",
    "packages/crm_domain",
    "packages/crm_filters",
    "packages/crm_integrations",
    "packages/master_data",
    "packages/whatsapp_gateway",
]
filterwarnings = [
    # CPython 3.14 reports SQLite handles from short-lived test engines during
    # garbage collection. Production PostgreSQL connections use pooled context
    # managers; keep this test-only noise out of CI summaries.
    "ignore:unclosed database.*:ResourceWarning",
]

[tool.ruff]
target-version = "py314"
line-length = 100
exclude = [
    ".update-backups",
    ".venv",
]

[tool.ruff.lint]
# Start with correctness rules that can gate the existing codebase without a
# formatting-only rewrite. The rule set can be expanded incrementally.
select = ["E9", "F63", "F7", "F82"]

[tool.coverage.run]
branch = true
source = [
    "apps/api",
    "apps/worker",
    "packages",
]

[tool.coverage.report]
skip_covered = true
show_missing = true
