[project]
name = "sms-campaign-manager"
version = "0.1.0"
description = "Durable, rate-limited Excel-to-SMSGate campaign sender"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.1.0",
]

[project.scripts]
sms-campaign = "sms_campaign_manager.cli:main"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

