[project]
name = "automation-platform"
version = "0.1.0"
description = "API-first automation platform for Deomee workflows."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic",
    "celery",
    "fastapi[standard]",
    "flower",
    "nats-py>=2.15.0",
    "lxml",
    "openpyxl",
    "pillow",
    "pandas",
    "psycopg[binary]",
    "pydantic-settings",
    "python-dotenv",
    "redis",
    "requests",
    "sqlmodel",
    "xlrd",
    "reportlab>=5.0.0",
]

[dependency-groups]
dev = [
    "httpx",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
    "apps/api",
    "apps/worker",
    "packages/automation_core",
    "packages/antidengue_automation",
    "packages/crm_domain",
    "packages/crm_filters",
    "packages/crm_integrations",
    "packages/master_data",
    "packages/whatsapp_gateway",
]

[tool.pytest.ini_options]
pythonpath = [
    "apps/api",
    "apps/worker",
    "packages/automation_core",
    "packages/antidengue_automation",
    "packages/crm_domain",
    "packages/crm_filters",
    "packages/crm_integrations",
    "packages/master_data",
    "packages/whatsapp_gateway",
]
